--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,7 @@
 		</section>	
 		<footer class="main" id="f1">
 			<a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?"</a>
+			<a href="https://github.com/AntolinDB/quiz">Página del proyecto en GitHub</a>
 		<footer>
 	</div>
   </body>
